examples/testing/negative_costs-lower_bounds/ex6.ces

eq(a(X,Y), 0-Y ,[a(X - 1,Y)], [X>=1,Y>0]).

eq(a(X,Y), 0,[], [X=0]).
